# personal_ai_assistant

./: .gitignore  LICENSE  README.md  alembic.ini  bot.py  calendar.ics  database.db  localhost.crt  localhost.key  main.py  migrate_data.py  pyproject.toml  requirements.txt  run.py  run.sh  tailwind.config.js
alembic/: env.py
alembic/versions/: 033607dbb8e3_initial_migration.py  1c98122a2c10_init.py  3659353a08f8_nullable_cards.py  6f74605af717_init.py  ae4f35b534d4_.py  b069fd8404ab_init_postgres.py  b9614d2a4403_added_screenshots.py  cd344088994c_init.py  d6ed27d3991a_.py  f56738b628f3_.py  fea4db29f075_nullable_cards.py
backend/backend/: celery.py  settings.py  urls.py
backend/bot/: bot.py
backend/dashboard/: models.py  tasks.py  urls.py  views.py
bot/: bot.py  database.db
bot/alembic/: env.py
bot/db_tools/: database.py  django-database-standalone.py  models copy.py  models.py
bot/handlers/: admin.py  error.py  events.py  notes.py  screenshots.py  user_commands.py
bot/logic/: aichat.py  calendar.py  reply_format.py  states.py  utils.py
db/: conf.py  database.py  models.py
db_tools/: database.py  models.py
fastapi/: main.py
fastapi/templates/: form.html  index.html
fastapi_app/: config.py  main.py
fastapi_app/conf/: config.py
fastapi_app/entity/: readme.md
fastapi_app/repository/: events.py  readme.md
fastapi_app/routers/: events.py  login.py  notes.py
fastapi_app/schemas/: events.py
handlers/: user_commands.py
keyboards/: kb.py
logic/: aichat.py  calendar.py  email_check.py  reply_format.py  states.py  utils.py
(+20 files in other folders)
