[tool.poetry]
name = "personalassistant-ai-bot"
version = "0.1.0"
description = ""
authors = ["d43v30n <anjey.mail@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aiogram = "^3.1.1"
python-dotenv = "^1.0.0"
openai = "^1.3.4"
ics = "^0.7.2"
sqlalchemy = "^2.0.23"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
